tests/ui/label/label_misspelled_2.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `:`
  --> $DIR/label_misspelled_2.rs:10:6
   |
LL |     c: for _ in 0..1 {
   |      ^ expected one of 8 possible tokens

error[E0425]: cannot find value `b` in this scope
  --> $DIR/label_misspelled_2.rs:8:15
   |
LL |     'b: for _ in 0..1 {
   |     -- a label with a similar name exists
LL |         break b;
   |               ^
   |               |
   |               not found in this scope
   |               help: use the similarly named label: `'b`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
